--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,3 +3,26 @@ html, body, #app {
   margin: 0;
   padding: 0;
 }
+
+body .el-table th.gutter {
+  display: table-cell !important
+}
+
+.el-breadcrumb {
+  margin-bottom: 15px;
+  font-size: 13px;
+}
+
+.el-card {
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15) !important;
+}
+
+.el-table {
+  margin-top: 15px;
+  font-size: 12px;
+}
+
+.el-pagination {
+  margin-top: 15px;
+  text-align: center;
+}
