--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -31,3 +31,15 @@ body .el-table th.gutter {
 .el-cascader-menu__list {
   height: 250px;
 }
+
+.el-steps {
+  margin: 15px 0;
+}
+
+.el-step__title {
+  font-size: 13px;
+}
+
+.ql-editor {
+  min-height: 300px;
+}
